Added explanation and examples on common modules

--- a/B_Intermediate_1/03. Importing Modules.ipynb
+++ b/B_Intermediate_1/03. Importing Modules.ipynb
@@ -387,7 +387,9 @@
    "source": [
     "## 3.2.1 `datetime`\n",
     "\n",
-    "[datetime.datetime](https://docs.python.org/3.5/library/datetime.html)\n",
+    "> The `datetim`e module supplies classes for manipulating dates. While date and time arithmetic is supported, the focus of the implementation is on efficient attribute extraction for output formatting and manipulation.\n",
+    "\n",
+    "> -[datetime.datetime](https://docs.python.org/3.5/library/datetime.html)\n",
     "\n",
     "Attributes: year, month, day, hour, minute, second, microsecond, and tzinfo."
    ]
@@ -422,22 +424,82 @@
    "source": [
     "## 3.2.2 `random`\n",
     "\n",
-    "[random.randrange()](https://docs.python.org/3.5/library/random.html#random.randrange)\n",
+    "##### [random.randrange()](https://docs.python.org/3.5/library/random.html#random.randrange)\n",
     "\n",
-    "[random.choice()](https://docs.python.org/3.5/library/random.html#random.choice)\n",
-    "    \n",
-    "[random.random()](https://docs.python.org/3.5/library/random.html#random.random)"
+    "> This returns a randomly selected element from range. It doesn’t actually build a range object."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import random"
+    "from random import randrange\n",
+    "\n",
+    "# randrange gives you an integral value. \n",
+    "# Go ahead and run this code several times\n",
+    "my_randrange = randrange(0, 10)\n",
+    "\n",
+    "my_randrange"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Have you noticed how the output changed after running the code several times? But remember that it will only show numbers from 0 to 9. 10 is not included."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### [random.choice()](https://docs.python.org/3.5/library/random.html#random.choice)\n",
+    "> Return a random element from the non-empty sequence such as list and tuple. If sequence is empty, it raises [`IndexError`](https://docs.python.org/3.5/library/exceptions.html#IndexError)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "random.choice([1,2,3,4,5])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On the example above, we used tuple. If you run the code several times, the output will change as well. Output will only be limited from numbers 1-5 because the tuple that we created has only numbers 1-5 in it. Go ahead and try it using a list."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### [random.random()](https://docs.python.org/3.5/library/random.html#random.random)\n",
+    "> Return the next random floating point number in the range `[0.0, 1.0)`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "print(random.random())\n"
    ]
   },
   {
@@ -450,7 +512,8 @@
    "source": [
     "# try some of the methods above\n",
     "# feel free to explore while reading the documentation\n",
-    "random"
+    "\n",
+    "import random\n"
    ]
   },
   {
