--- a/A_Beginner_2/02. Variables.ipynb
+++ b/A_Beginner_2/02. Variables.ipynb
@@ -6,8 +6,7 @@
    "source": [
     "# 02. Variables\n",
     "\n",
-    "Variables are reserved memory locations to store values.\n",
-    "Every variable in Python is an object."
+    "Variables are reserved memory locations to store values. Every variable in Python is an object."
    ]
   },
   {
@@ -252,14 +251,8 @@
     "\n",
     "- Python allows you to use a lowercase L with long, but it is recommended that you use only an uppercase L to avoid confusion with the number 1. Python displays long integers with an uppercase L.\n",
     "\n",
+    "- A complex number consists of an ordered pair of real floating-point numbers denoted by __`x + yj`__, where __`x`__ and __`y`__ are the real numbers and __`j`__ is the imaginary unit.\n",
     "\n",
-    "- A complex number consists of an ordered pair of real floating-point numbers denoted by __`x + yj`__, where __`x`__ and __`y`__ are the real numbers and __`j`__ is the imaginary unit."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 2.6.2 String (immutable)\n",
     "\n",
     "- Strings in Python are identified as a contiguous set of characters represented in the quotation marks. \n",
@@ -406,7 +399,6 @@
     "\n",
     "A tuple is another sequence data type that is similar to the list. A tuple consists of a number of values separated by commas. Unlike lists, however, tuples are enclosed within parentheses.\n",
     "\n",
-    "\n",
     "The main differences between lists and tuples are: Lists are enclosed in brackets (__`[]`__) and their elements and size can be changed, while tuples are enclosed in parentheses (__`()`__) and cannot be updated. Tuples can be thought of as read-only lists. \n",
     "\n",
     "For example:"
@@ -542,13 +534,8 @@
    "source": [
     "For example, everytime we call a `for-loop` or define a function, it will create its own namespace.\n",
     "\n",
-    "We'll tackle more about namespace in the later part of this tutorial."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "We'll tackle more about namespace in the later part of this tutorial.\n",
+    "\n",
     "## Summary\n",
     "\n",
     "Today, you have learned about Python variables and a brief introduction about Data Types and Namespaces.\n",
