--- a/A_Beginner_1/01. Hello, World.ipynb
+++ b/A_Beginner_1/01. Hello, World.ipynb
@@ -4,21 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 01. Hello, World!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## 01. Hello, World!\n",
+    "\n",
     "Welcome to Python!\n",
+    "\n",
     "You'll be using these interactive notebooks throughout this tutorial.\n",
     "\n",
     "It is recommended to use Python 3. You can check the version that you're using on the upper right side of your screen:\n",
     "\n",
     "![Beginner_1](./images/img_version.png)\n",
     "\n",
-    "You may run the codes (__`shift + enter`__), and change it. Basically you may do whatever you want to the codes for testing. :)"
+    "You may run the codes (__`shift + enter`__ in the box), and change it. Basically you may do whatever you want to the codes for testing. :)"
    ]
   },
   {
@@ -42,7 +38,7 @@
     "\n",
     "Print your name in this format:\n",
     "\n",
-    "Hi, I'm ______________________________________."
+    "Hi, I'm `___________`."
    ]
   },
   {
@@ -64,27 +60,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you're having trouble or for some reason, you just want to restart the kernel, you may do so! On the navigation bar, click on __Kernel__ and choose __Restart__:\n",
+    "If you're having trouble or for some reason, you just want to restart the kernel, you may do so! On the navigation bar, click on __Kernel__ and click __Restart__ (other versions may have different options):\n",
     "\n",
     "![Beginner_1](./images/img_restart.png)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "A promt will appear and you may choose between __Clear all outputs & restart__ or just __Restart__:\n",
     "\n",
-    "![Beginner_1](./images/img_kernel_options.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
+    "A prompt will appear and you may choose between __Clear all outputs & restart__ or just __Restart__:\n",
+    "\n",
+    "![Beginner_1](./images/img_kernel_options.png)\n",
+    "\n",
     "Good luck and have fun!"
    ]
   }
