--- a/A_Beginner_1/04. Operators and Delimiters.ipynb
+++ b/A_Beginner_1/04. Operators and Delimiters.ipynb
@@ -6,20 +6,10 @@
    "source": [
     "# 4.1 [Operators](https://docs.python.org/3.5/reference/lexical_analysis.html#operators)\n",
     "\n",
-    "There are various operators available in Python. Operators usually come in symbols but in Python, there are also operators that come in words. Let's take a look at some common operators."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4.1.1 Arithmetic Operators"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "There are various operators available in Python. Operators usually come in symbols but in Python, there are also operators that come in words. Let's take a look at some common operators.\n",
+    "\n",
+    "## 4.1.1 Arithmetic Operators\n",
+    "\n",
     "### ( `+` ) addition\n",
     "\n",
     "Adds values on either side of the operator. "
@@ -84,7 +74,7 @@
     "\n",
     "Divides left hand operand by right hand operand.\n",
     "\n",
-    "The `x / y` expression performs __\"true division\"__ in Python 3.x, and __\"classic division\"__ in Python 2.x."
+    "The `x/y` expression performs \"true division\" in Python 3.x, and \"classic division\" in Python 2.x."
    ]
   },
   {
@@ -131,9 +121,9 @@
    "source": [
     "### ( `//` ) floor division\n",
     "\n",
-    "Also known as the ___integer division___. The division of operands will result to a quotient in which the digits after the decimal point are __removed__.\n",
+    "Also known as the _integer division_. The division of operands will result to a quotient in which the digits after the decimal point are removed.\n",
     "\n",
-    "In both Python 3.x and Python 2.x, the `x // y` floor division expression __always truncates__ fractional remainders."
+    "In both Python 3.x and Python 2.x, the `x // y` floor division expression always truncates fractional remainders."
    ]
   },
   {
@@ -171,16 +161,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Beginner_1](./images/img_floor_division_2.x.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "![Beginner_1](./images/img_floor_division_2.x.png)\n",
+    "\n",
     "### ( `%` ) modulus\n",
     "\n",
-    "Divides left hand operand by right hand operand and ___returns the remainder___."
+    "Divides left hand operand by right hand operand and returns the remainder."
    ]
   },
   {
@@ -200,7 +185,7 @@
    "source": [
     "### ( `**` ) exponent\n",
     "\n",
-    "Performs ___exponential (power)___ calculation on operators."
+    "Performs exponential (power) calculation on operators."
    ]
   },
   {
@@ -219,7 +204,6 @@
    "metadata": {},
    "source": [
     "## 4.1.2 Assignment Operators\n",
-    "\n",
     "\n",
     "### ( `=` ) equals\n",
     "\n",
@@ -327,6 +311,7 @@
    "metadata": {},
    "source": [
     "### ( `-=` ) subtract AND\n",
+    "\n",
     "Subtracts the right operand from left and assigns subtraction to the left operand. \n",
     "\n",
     "For example:"
@@ -351,7 +336,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<i>Can you guess the result if you print `c`?</i>"
+    "Can you guess the result if you print `c`?"
    ]
   },
   {
@@ -402,7 +387,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<i>Try it yourself! Print c!</i>"
+    "Try it yourself! Print c!"
    ]
   },
   {
@@ -453,7 +438,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<i>Try to print c below!</i>"
+    "Try to print c below!"
    ]
   },
   {
@@ -479,6 +464,7 @@
    "metadata": {},
    "source": [
     "### ( `%=` ) modulus AND\n",
+    "\n",
     "Takes modulus using two operands and assign the result to left operand. \n",
     "\n",
     "For example:"
@@ -503,7 +489,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<i>See the example below and again, print c.</i>"
+    "See the example below and again, print c."
    ]
   },
   {
@@ -529,6 +515,7 @@
    "metadata": {},
    "source": [
     "### ( `**=` ) exponent AND\n",
+    "\n",
     "Performs exponential (power) calculation on operators and assign value to the left operand. \n",
     "\n",
     "For example:"
@@ -553,7 +540,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<i>Check out the example below an print c.</i>"
+    "Check out the example below an print c."
    ]
   },
   {
@@ -579,7 +566,9 @@
    "metadata": {},
    "source": [
     "### ( `//=` ) floor division AND\n",
+    "\n",
     "Performs floor division on operators and assign value to the left operand. \n",
+    "\n",
     "> As discussed earlier, in floor division, the division of operands will result to a quotient in which the digits after the decimal point are removed.\n",
     "\n",
     "For example:"
@@ -604,7 +593,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<i>Print c below to see the result.</i>"
+    "Print c below to see the result."
    ]
   },
   {
@@ -633,16 +622,11 @@
     "\n",
     "> _\"A boolean is like a light switch. It can only have two values. Just like a light switch can only be on or off, a boolean can only be True or False.\"_\n",
     "\n",
-    "Below are the boolean operations in ascending priority:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Below are the boolean operations in ascending priority:\n",
+    "\n",
     "### `or`\n",
     "\n",
-    "It only evaluates the second argument if the first one is __False__.\n",
+    "It only evaluates the second argument if the first one evaluates as `False`.\n",
     "\n",
     "Go ahead if run the example:"
    ]
@@ -669,19 +653,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On the example above, the second condition which is the __color2 == \"orange\"__ was no longer evaluated because the first condition was already satisfied. Always remember that in __\"or\"__, only one condition needs to be satisfied to make it True.\n",
+    "On the example above, the second condition which is the `color2 == \"orange\"` was no longer evaluated because the first condition was already satisfied. Always remember that in `or`, only one condition needs to be satisfied to make it True.\n",
     "\n",
+    "Try changing the first condition to see what will happen.\n",
     "\n",
-    "Try changing the first condition to see what will happen."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### `and`\n",
     "\n",
-    "It only evaluates the second argument if the first one is __True__.\n",
+    "It only evaluates the second argument if the first one evaluates as `True`.\n",
     "\n",
     "Try to run the example below:"
    ]
@@ -705,13 +683,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In __\"and\"__, both conditions should be met. If you change the conditions on the example above, none will be printed. Try it!  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "In `and`, both conditions should be met. If you change the conditions on the example above, none will be printed. Try it!  \n",
+    "\n",
     "### `not`\n",
     "\n",
     "Using __\"not\"__ before a boolean expression inverts it. For the example, run the code below."
@@ -751,22 +724,11 @@
     "|    `not x`   | If `x` is false then `True`; else, `False`        |\n",
     "|   `x or y`   | If `x` is false then `y`; else, `x`               |\n",
     "|   `x and y`  | If `x` is false then`x`; else `y`                 |\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "\n",
     "## 4.1.4 Membership Operators\n",
     "\n",
-    "Python’s membership operators test for membership in a sequence, such as strings, lists, or tuples. There are two membership operators:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Python’s membership operators test for membership in a sequence, such as strings, lists, or tuples. There are two membership operators:\n",
+    "\n",
     "### `in`\n",
     "\n",
     "Evaluates to true if it finds a variable in the specified sequence and false otherwise."
@@ -819,16 +781,11 @@
    "source": [
     "## 4.1.5 Identity Operators\n",
     "\n",
-    "They are used to check if two values (or variables) are located on the same part of the memory. Two variables that are equal does not imply that they are identical."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "They are used to check if two values (or variables) are located on the same part of the memory. Two variables that are equal does not imply that they are identical.\n",
+    "\n",
     "### `is`\n",
     "\n",
-    "Evaluates to True if the operands are identical (refer to the same object)"
+    "Evaluates to True if the operands are identical (refer to the same object)."
    ]
   },
   {
@@ -851,7 +808,7 @@
    "source": [
     "### `is not`\n",
     "\n",
-    "Evaluates to True if the operands are not identical (do not refer to the same object)"
+    "Evaluates to True if the operands are not identical (do not refer to the same object)."
    ]
   },
   {
@@ -876,14 +833,10 @@
     "\n",
     "> _\"These operators compare the values on either sides of them and decide the relation among them. They are also called Relational operators.\"_\n",
     "\n",
-    "In Python 3.x, comparisons are strict and will work only for compatible types. Otherwise, a `TypeError` is raised."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "In Python 3.x, comparisons are strict and will work only for compatible types. Otherwise, a `TypeError` is raised.\n",
+    "\n",
     "###  `==` \n",
+    "\n",
     "If the values of two operands are equal, then the condition becomes true. Print the code below to see the result."
    ]
   },
@@ -907,7 +860,9 @@
    "source": [
     "### `!=`\n",
     " \n",
-    "If values of two operands are __not equal__, then condition becomes true. For example:"
+    "If values of two operands are not equal, then condition becomes true.\n",
+    "\n",
+    "For example:"
    ]
   },
   {
@@ -932,7 +887,7 @@
     "\n",
     "If values of two operands are not equal, then condition becomes `True`. \n",
     "\n",
-    "This is similar to the __!=__ operator but is then deprecated in Python 3 because it is redundant."
+    "This is similar to the `!=` operator but is then deprecated in Python 3 because it is redundant."
    ]
   },
   {
@@ -953,14 +908,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Note_: \n",
-    "> `!=` and `<>` both mean not equal by value in Python 2.x,  but `!=` is the preferred syntax in Python 2.x and the only supported option in Python 3.x."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "__Note:__ \n",
+    "\n",
+    "> `!=` and `<>` both mean not equal by value in Python 2.x,  but `!=` is the preferred syntax in Python 2.x and the only supported option in Python 3.x.\n",
+    "\n",
     "## 4.1.7 Difference between `is` and `==`\n",
     "\n",
     "### `is`\n",
@@ -973,7 +924,7 @@
     " - Use it when you would like to know if two objects have the same value.\n",
     " - Will return true if the objects referred to by the variables are equal.\n",
     " \n",
-    "In short, `is` performs an identity test; `==` performs value comparison, and so is much more generally useful.\n",
+    "In short, `is` performs an identity test; `==` performs value comparison.\n",
     "\n",
     "For example:"
    ]
@@ -1021,13 +972,8 @@
    "source": [
     "# 4.2 [Delimiters](https://docs.python.org/3.5/reference/lexical_analysis.html#delimiters)\n",
     "\n",
-    "You'll also encounter a lot of delimiters in Python. One delimiter you won't see a lot is the semicolon (`;`). The line delimiter is completely optional in Python. Each data type has its own delimiter and these delimiters can be found in other places. Let's look at what some common delimiters mean."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "You'll also encounter a lot of delimiters in Python. One delimiter you won't see a lot is the semicolon (`;`). The line delimiter is completely optional in Python. Each data type has its own delimiter and these delimiters can be found in other places. Let's look at what some common delimiters mean.\n",
+    "\n",
     "## 4.2.1 `[ ]` (brackets)\n",
     "\n",
     "These represent __lists__ when it contains a series of values, or a __list comprehension__ when it contains an expression.\n",
@@ -1141,13 +1087,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is not an exhaustive list. The documentation will contain a comprehensive information on operators and delimiters."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "This is not an exhaustive list. The documentation will contain a comprehensive information on operators and delimiters.\n",
+    "\n",
     "## Summary\n",
     "\n",
     "Today, you have learned about the basic operators and delimiters in Python. Remember: Operators are the constructs which can manipulate the value of operands.\n",
@@ -1155,26 +1096,15 @@
     "- __Arithmetic Operators:__ \n",
     "These are used to perform mathematical operations. (_e.g.,_ addition, subtraction, multiplication.)\n",
     "\n",
-    "\n",
-    "\n",
     "- __Assignment Operators:__ These are used to assign values to variables. '__`a = 5`__' is a simple example. The operator '__`=`__' assigns the value '__5__' on the right to the _variable_ '__`a`__' on the left.\n",
-    "\n",
-    "\n",
     "\n",
     "- __Boolean Operators:__ _aka Logical Operators._ These are the '__`and`__', '__`or`__', '__`not`__' operators.\n",
     "\n",
-    "\n",
-    "\n",
     "- __Membership Operators:__ These are the '__`in`__' and '__`not in`__' operators in Python. They are used to test whether a value or variable is found in a sequence (string, list, tuple, set and dictionary). In a dictionary we can only test for presence of key, not the value.\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "- __Identity Operators:__ These are the '__`is`__' and '__`is not`__' operators in Python. They are used to check if two values (_or variables_) are located on the same part of the memory. Two variables that are equal does not imply that they are identical.\n",
     "\n",
-    "\n",
-    "- __Comparision Operators:__ These are used to compare values. It either returns '__`True`__' or '__`False`__' according to the condition.\n",
-    "\n"
+    "- __Comparision Operators:__ These are used to compare values. It either returns '__`True`__' or '__`False`__' according to the condition."
    ]
   }
  ],
