--- a/A_Beginner_2/01. Built-in Functions.ipynb
+++ b/A_Beginner_2/01. Built-in Functions.ipynb
@@ -98,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A __`print`__ call is ended by a newline:"
+    "A __`print`__ call is ended by a new line:"
    ]
   },
   {
@@ -192,7 +192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.4 Casting\n",
+    "## 1.4 Type Casting\n",
     "\n",
     "Sometimes, you may need to perform conversions between the built-in types. To convert between types, you simply use the type name as a function. __Casting__ is when you convert a variable value from one type to another. \n",
     "\n",
