--- a/A_Beginner_2/02. Variables.ipynb
+++ b/A_Beginner_2/02. Variables.ipynb
@@ -107,7 +107,7 @@
    "source": [
     "## 2.3 Naming Conventions\n",
     "\n",
-    ">Understandable code frees mental bandwidth from having to puzzle out inconsistencies, making it easier to maintain and enhance projects of all sizes.\n",
+    "> Understandable code frees mental bandwidth from having to puzzle out inconsistencies, making it easier to maintain and enhance projects of all sizes.\n",
     "\n",
     "\n",
     "1. Readability is very important.\n",
@@ -183,18 +183,13 @@
     "\n",
     "The data stored in memory can be of many types. For example, a person's age is stored as a numeric value and his or her address is stored as alphanumeric characters. Python has various standard data types that are used to define the operations possible on them and the storage method for each of them.\n",
     "\n",
-    "Python has five standard data types:\n",
+    "These are some of the commonly used data types:\n",
     "\n",
     " - Numbers\n",
-    "\n",
     " - String\n",
-    "\n",
     " - List\n",
-    "\n",
     " - Tuple\n",
-    "\n",
     " - Dictionary\n",
-    " \n",
     "\n",
     "### [Mutable vs. Immutable](http://codehabitude.com/2013/12/24/python-objects-mutable-vs-immutable/)\n",
     "Before having a brief introduction of the data types, let me explain first the difference between __mutable__ and __immutable__.\n",
@@ -491,7 +486,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We created a reference to the __`\"Hello string\"`__ object, and therefore, we can access via its variable name __`a_string`__.\n",
+    "We created a reference to the __`\"Hello String\"`__ object, and therefore, we can access via its variable name __`a_string`__.\n",
     "\n",
     "We can picture a namespace as a Python dictionary structure, where the dictionary keys represent the names and the dictionary values the object itself (and this is also how namespaces are currently implemented in Python)\n",
     "\n",
@@ -540,7 +535,8 @@
     "\n",
     "Today, you have learned about Python variables and a brief introduction about Data Types and Namespaces.\n",
     "\n",
-    "Remember: \n",
+    "Remember:\n",
+    "\n",
     "> Python variables are nothing but reserved memory locations to store values. This means that when you create a variable you reserve some space in memory.\n",
     "\n",
     "> Based on the data type of a variable, the interpreter allocates memory and decides what can be stored in the reserved memory. Therefore, by assigning different data types to variables, you can store integers, decimals or characters in these variables."
