--- a/A_Beginner_2/3.1 Data Types - Booleans.ipynb
+++ b/A_Beginner_2/3.1 Data Types - Booleans.ipynb
@@ -100,7 +100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise\n",
+    "#### Exercise\n",
     "\n",
     "Complete the `print` statements below by assigning some values to make the output all `True`."
    ]
