--- a/A_Beginner_2/3.6 Data Types - Dictionaries.ipynb
+++ b/A_Beginner_2/3.6 Data Types - Dictionaries.ipynb
@@ -393,9 +393,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `dict.items()` or `dict.iteritems()` in Python 2.x\n",
+    "### `dict.items()`\n",
     "\n",
-    "Returns list of the dictonary's key-value pairs."
+    "Returns list of the dictonary's key-value pairs.\n",
+    "\n",
+    "- `dict.iteritems()` in Python 2.x"
    ]
   },
   {
@@ -415,9 +417,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `dict.keys()` or `dict.iterkeys()` in Python 2.x\n",
+    "### `dict.keys()`\n",
     "\n",
-    "Returns list of the dictonary's keys."
+    "Returns list of the dictonary's keys.\n",
+    "\n",
+    "- `dict.iterkeys()` in Python 2.x"
    ]
   },
   {
@@ -437,9 +441,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `dict.values()` or `dict.itervalues()` in Python 2.x\n",
+    "### `dict.values()`\n",
     "\n",
-    "Returns a list of the dictionary's values."
+    "Returns a list of the dictionary's values.\n",
+    "\n",
+    "- `dict.itervalues()` in Python 2.x"
    ]
   },
   {
@@ -460,14 +466,11 @@
    "metadata": {},
    "source": [
     "## Notes\n",
-    "- A dictionary is also known as \"Associate Array\", \"Map\", \"Hash Map\",  or \"Unordered Map\".\n",
-    "> The conceptual implementation of a dictionary is that of a hash table, meaning, checks for existence are quite fast. We can determine if a specific key is present in the dictionary without needing to examine every element (which gets slower as the dictionary gets bigger). The Python interpreter can just go to the location key \"should be\" at (if it's in the dictionary) and see if key is actually there.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "\n",
+    "A dictionary is also known as \"Key-value pair\", \"Associate Array\", \"Map\", \"Hash Map\",  or \"Unordered Map\".\n",
+    "\n",
+    "> The conceptual implementation of a dictionary is that of a hash table, meaning, checks for existence are quite fast. We can determine if a specific key is present in the dictionary without needing to examine every element (which gets slower as the dictionary gets bigger). The Python interpreter can just go to the location key \"should be\" at (if it's in the dictionary) and see if key is actually there.\n",
+    "\n",
     "## Exercise\n",
     "\n",
     "(1) Create an empty dictionary. Name it `my_dict`.\n",
